# eventflow

./: .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  LICENSE  README.md  TODO.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
configs/datasets/: chicago_crime_example.yaml
configs/recipes/: chicago_crime_v1.yaml
docs/: api_reference.md  architecture.md  datasets.md  point_process_features.md
notebooks/: demo_chicago_crime.ipynb  demo_chicago_crime_explained.ipynb
scripts/: run_chicago_chunked.py  run_chicago_recipe.py  run_experiment.py
src/eventflow/: __init__.py
src/eventflow/cli/: __init__.py  main.py
src/eventflow/core/: __init__.py  event_frame.py  features.py  output_adapters.py  pipeline.py  registry.py  schema.py  spatial.py  temporal.py  utils.py
src/eventflow/core/adapters/: __init__.py  base.py  configs.py  graph.py  raster.py  registration.py  sequence.py  stream.py  table.py
src/eventflow/core/context/: __init__.py  enricher.py  joiners.py  sources.py
src/eventflow/core/steps/: __init__.py  context.py  point_process.py  registration.py  spatial.py  streaming.py  temporal.py  validation.py
src/eventflow/datasets/: __init__.py
src/eventflow/datasets/chicago_crime/: __init__.py  mapping.py  schema.py
src/eventflow/datasets/chicago_crime/context/: __init__.py  demographics.py  events.py  weather.py
src/eventflow/datasets/chicago_crime/recipes/: __init__.py  chicago_crime_v1.py
src/eventflow/recipes/: __init__.py  base.py  registry.py
src/eventflow/tracking/: __init__.py  mlflow_tracker.py  protocol.py
tests/: __init__.py  conftest.py
tests/cli/: test_cli.py
tests/core/: __init__.py  test_context.py  test_event_frame.py  test_features.py  test_metadata.py  test_output_adapters.py  test_pipeline.py  test_pipeline_extended.py  test_point_process_steps.py  test_registry.py  test_schema.py  test_spatial.py  test_spatial_steps.py  test_streaming_steps.py  test_temporal.py  test_temporal_steps.py  test_utils.py  test_validation.py
tests/datasets/: __init__.py  test_chicago_mapping.py  test_chicago_mapping_cleaning.py  test_chicago_recipe.py
tests/integration/: __init__.py
tests/recipes/: __init__.py  test_registry.py
tests/tracking/: test_mlflow_tracker.py
